feat:1.实现矩形，圆形，直线，箭头的画图功能，且为绘制图形增加了更改粗度和更改颜色功能;2.实现了保存文件和打开文件功能；3.实现了放映。以及键盘监听，从而实现快捷键附着功能；4.修复了画图之后鼠标锁死在画图状态的问题。5.由于作者个人喜好，额外花时间优化了一下整体ui，包括设定清爽的绿色主题，圆角按钮，优化布局。至此整个项目基本宣告成功，完结撒花！！！